[package]
name = "helix-dark-mode"
description = "Dark mode for the Helix editor"
homepage = "https://codeberg.org/swsnr/helix-dark-mode"
license = "EUPL-1.2"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
async-executor = "1.3.3"
async-signal = "0.2.13"
async-channel = "2.5.0"
async-io = { version = "2.6.0", features = ["tracing"] }
blocking = { version = "1.6.2", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "std",
    "ansi",
    "registry",
] }
logcontrol-tracing = "0.2.0"
logcontrol-zbus = "3.0.0"
futures-lite = "2.6.1"
zbus = { version = "5.7.1", default-features = false }
fastrand = "2.3.0"
rustix = { version = "1.0.7", features = ["fs", "process"] }
anyhow = "1.0.0"
